cmake_minimum_required (VERSION 2.6)
project (RUsageExample)
set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set (RUSAGE_SRCS src/main.c src/CPUUsage.c src/CPUUsagePrinters.c)
INCLUDE( "${CMAKE_SOURCE_DIR}/cmake/Modules/FindJansson.cmake" )
if (JANSSON_FOUND)
    set (RUSAGE_SRCS ${RUSAGE_SRCS} src/CPUUsageJSON.c)
    add_definitions( -DCPUUSAGE_HAVE_JANSSON )
endif (JANSSON_FOUND)
add_executable(rusageExample ${RUSAGE_SRCS})
install(TARGETS rusageExample)
target_include_directories(rusageExample PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(rusageExample ${JANSSON_LIBRARIES})
include_directories(src)
